[package]
name = "vizia_synth_demo"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2021"

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.60"
vizia = {git = "https://github.com/vizia/vizia", rev = "f3425d343f9c71de19ecd37de6cb245473d94c07"}
crossbeam-channel = "0.5.5"